# next-panel

./: .dockerignore  .gitignore  Cargo.toml  README.md
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  sw.ts
frontend/src/lib/: api.ts  auth.ts  crypto.ts  local.ts  store.ts
frontend/src/view/login/: index.tsx  style.css
frontend/src/view/panel/: index.tsx  style.css
frontend/src/view/pending/: index.tsx
src/: config.rs  main.rs
src/bff/: account.rs  encrypt.rs  local.rs  mod.rs
src/bff/account/: login.rs  mod.rs
src/bff/next_push/: admin.rs  app.rs  mod.rs  user.rs
src/entity/: mod.rs  publisher.rs  subscription.rs  user.rs
