[package]
name = "next-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
humantime = "2.1.0"
log = "0.4.22"
openssl = "0.10.68"
sea-orm = { version = "1.1.3", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0.216"
serde_json = "1.0.134"
structopt = "0.3.26"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "compression-br", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
